# QPentago

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml
ci/appveyor/: win-set-cmake_generator.bat  win-set-cmake_qt_dir.bat
doc/: uml.graphml
src/: CMakeLists.txt  Pentago.pro  QPentago.pro  glview.cpp  glview.h  graphicboard.cpp  graphicboard.h  graphicbutton.cpp  graphicmenu.cpp  graphicmenu.h  graphicquadrant.cpp  graphicstone.cpp  graphicstone.h  iview.h  main.cpp  main.h  pentago.rc  source.qrc  tester_.cpp  tester_.h  view.cpp  view.h
src/GLinterface/: GL.qrc  GLLabel.h  GLRectangleCoord.h  GLbutton.cpp  GLbutton.h  GLfontkeeper.h  GLfontkeeperbase.h  GLfontutils.cpp  GLfontutils.h  GLgraphics.qrc  GLlabel.cpp  GLlabel.h  GLlist.cpp  GLlist.h  GLmenu.cpp  GLmenu.h  GLradiogroup.cpp  GLradiogroup.h  GLrenderobject.h  GLtextedit.cpp  GLtextedit.h  GLtextures.cpp  GLtextures.h  Glabel.cpp  button.cpp  button.h  fontkeeperbase.h  label.h  menu.cpp  menu.h  pentagoboard.cpp  pentagoboard.h  radiogroup.cpp  radiogroup.h  stone.cpp  stone.h  textures.cpp  textures.h
src/GLinterface/fonts/: fonts_list.txt
src/GLinterface/graphics/: button_little.psd  dots.psd  radio.psd
src/Model/: Board.cpp  Board.h  Referee.cpp  Referee.h  serialization.cpp  serialization.h
src/PentagoLib/: CMakeLists.txt
src/PentagoLib/include/PentagoLib/: Board.h  Game.h  GameState.h  Player.h  Referee.h  View.h  iview.h
src/PentagoLib/src/: Board.cpp  Game.cpp  GameState.cpp  Player.cpp  Referee.cpp  serialization.cpp
src/PentagoLib/test/: BoardTests.cpp  DummyTest.cpp  main.cpp
src/Presenter/: Game.cpp  Game.h  Player.cpp  Player.h
src/View/: graphicboard.cpp  graphicbutton.h  graphicquadrant.h
src/WidgetsApp/: CMakeLists.txt  Game.cpp  View.cpp  View.h  main.cpp
src/WidgetsApp/View/: graphicboard.cpp  graphicboard.h  graphicmenu.cpp  graphicmenu.h  graphicstone.cpp
src/android/: AndroidManifest.xml
src/pentagolib/: CMakeLists.txt
src/pentagolib/include/pentagolib/: Board.h  Game.h  Player.h  Referee.h  serialization.h
src/pentagolib/src/: Game.cpp  Player.cpp
src/pentagolib/test/: CMakeLists.txt
src/widgetapp/: CMakeLists.txt  View.cpp  main.cpp
src/widgetapp/View/: graphicboard.h
